<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="enter_distance_meter">Enter distance (meter)</string>
    <string name="enter_time_second">Enter time (second)</string>
    <string name="clear">clear</string>
    <string name="calculate">calculate</string>
    <string name="average_speed_km_h">Average Speed (km/h)</string>
    <string name="toast_d_t">Distance and time are required.</string>
    <string name="toast_t">Time must be greater than zero.</string>
    <string name="speed_over_msg">Speed is over limit!</string>
</resources>